--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 				<ul>
 
 					<li><a class="nav-link" href="about.html">ABOUT</a></li>
-					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i class="bi bi-chevron-down"></i></a>
+					<li class="dropdown"><a class="nav-link" href="#"><span>Solutions</span><i
+								class="bi bi-chevron-down"></i></a>
 						<ul>
 							<li><a href="goals/transform-your-enterprise.html">Transform your enterprise
 								</a></li>
@@ -70,7 +71,8 @@
 			<div class="carousel-item slide-1  active">
 				<div class="carousel-container container">
 					<h1>Transforming<br> Enterprises</h1>
-					<p>We are a digital transformation company enabling best in class digital experiences for your prominent
+					<p>We are a digital transformation company enabling best in class digital experiences for your
+						prominent
 						stakeholders.
 					</p>
 				</div>
@@ -79,7 +81,8 @@
 				<div class="carousel-container container">
 					<h1>Accelerating your path <br>to digitally enabled success
 					</h1>
-					<p>We are a digital transformation company enabling high impact data driven initiatives that accelerate your
+					<p>We are a digital transformation company enabling high impact data driven initiatives that
+						accelerate your
 						path to market
 						dominance.
 					</p>
@@ -89,7 +92,8 @@
 				<div class="carousel-container container">
 					<p class="subtxet">kai·zen <span>/ˈkīzən/</span></p>
 					<h1> Continuous Improvement</h1>
-					<p class="">Torinit is an extended continuous improvement partner that enables you to maintain industry
+					<p class="">Torinit is an extended continuous improvement partner that enables you to maintain
+						industry
 						leadership.
 					</p>
 				</div>
@@ -129,7 +133,7 @@
 		</section>
 		<!-- End About Section -->
 		<!-- ======= services Section ======= -->
-		<section id="services" class="services ">
+		<section id="services" class="services home">
 			<div class="container-fluid p-0">
 				<div class="row">
 					<!--service-1-->
@@ -141,9 +145,11 @@
 						</div>
 						<div class="content">
 							<h3>Digital Transformation</h3>
-							<p>Digital First Organizations have experienced tremendous growth in the last decade. We have worked
+							<p>Digital First Organizations have experienced tremendous growth in the last decade. We
+								have worked
 								relentlessly to create
-								a proven framework that helps transform business processes from initiation to execution with the help of
+								a proven framework that helps transform business processes from initiation to execution
+								with the help of
 								state of the
 								art digital technologies.
 							</p>
@@ -167,9 +173,11 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Product Development</h3>
-							<p>Digital products, internal or+ consumer facing, have become a prominent source of information
+							<p>Digital products, internal or+ consumer facing, have become a prominent source of
+								information
 								distribution today.
-								Enabling customer success, accelerating revenues, controlling costs are all possible through appropriate
+								Enabling customer success, accelerating revenues, controlling costs are all possible
+								through appropriate
 								digital product
 								strategy, development and distribution.
 
@@ -188,9 +196,11 @@
 						</div>
 						<div class="content">
 							<h3>Experience Design</h3>
-							<p>Creating or improving meaningful experiential journeys for your customers, consumers, employees has a
+							<p>Creating or improving meaningful experiential journeys for your customers, consumers,
+								employees has a
 								direct correlation
-								with the health of your enterprise both financially and qualitatively. Invest in seamless experiences to
+								with the health of your enterprise both financially and qualitatively. Invest in
+								seamless experiences to
 								realize the
 								true potential of their value chain.
 
@@ -214,7 +224,8 @@
 					<div class="bluebox">
 						<div class="content">
 							<h3>Engineering Pods</h3>
-							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the clock support.
+							<p>Harness the power of global teams to build velocity, agility, efficiency, and round the
+								clock support.
 								Our engineering
 								pods act as a dedicated extended engineering team to your internal development efforts.
 
@@ -280,13 +291,17 @@
 						<div class="section-title">
 							<h2>Who we are.</h2>
 						</div>
-						<p>Torinit exists to serve mid-market companies on their path to success. We’re more than consultants —
+						<p>Torinit exists to serve mid-market companies on their path to success. We’re more than
+							consultants —
 							we’re full partners
-							in your journey to solving critical business problems and charting desirable futures. We pride ourselves
+							in your journey to solving critical business problems and charting desirable futures. We
+							pride ourselves
 							in becoming
-							incredibly attached to your projects, taking time to deeply understand your challenges and building
+							incredibly attached to your projects, taking time to deeply understand your challenges and
+							building
 							empathy with your
-							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver customized services
+							consumers. We don’t believe in blanket solutions, but work relentlessly to deliver
+							customized services
 							that drive
 							transformational growth.
 
@@ -321,7 +336,8 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Transform your enterprise
 								</h3>
-								<p class="content-text">Gain competitive advantage and improve your performance by building a
+								<p class="content-text">Gain competitive advantage and improve your performance by
+									building a
 									future-facing culture.
 
 
@@ -342,7 +358,8 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Improve digital experiences
 								</h3>
-								<p class="content-text">Create exceptional experiences that delight your users and streamline
+								<p class="content-text">Create exceptional experiences that delight your users and
+									streamline
 									operations, so that you can focus on what matters.
 
 
@@ -362,7 +379,8 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Accelerate sales
 								</h3>
-								<p class="content-text">Nurture lasting relationships and cultivate engagement by refining end-to-end
+								<p class="content-text">Nurture lasting relationships and cultivate engagement by
+									refining end-to-end
 									customer journeys.
 
 
@@ -385,7 +403,8 @@
 								<h3 class="content-title">Optimize operations
 
 								</h3>
-								<p class="content-text">Unlock efficiency and increase performance by reimagining your operational model
+								<p class="content-text">Unlock efficiency and increase performance by reimagining your
+									operational model
 									with human-centricity at the core.
 
 								</p>
@@ -407,7 +426,8 @@
 								<h3 class="content-title">Build better products
 
 								</h3>
-								<p class="content-text">Uncover new sources of value and boost product development by developing
+								<p class="content-text">Uncover new sources of value and boost product development by
+									developing
 									consistent, highly effective and inspirational
 									experiences enabled by state-of-the-art design systems.
 
@@ -429,7 +449,8 @@
 							<div class="content-details fadeIn-bottom">
 								<h3 class="content-title">Build data intelligence
 								</h3>
-								<p class="content-text">Create a data-driven culture that builds a competitive edge and unlocks true
+								<p class="content-text">Create a data-driven culture that builds a competitive edge and
+									unlocks true
 									performance.
 								</p>
 							</div>
