--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 	<main id="main">
 		<!-- ======= Overview Section ======= -->
 		<section class="overview">
-			<div class="container">
+			<div class="container container-xs">
 				<div class="row content">
 					<div class="col-xl-12">
 						<p>
