--- a/services/digital-transformation.html
+++ b/services/digital-transformation.html
@@ -66,7 +66,7 @@
   <!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="banner" class="d-flex flex-column justify-content-end align-items-center p-0 service-banner-2">
-    <div class="banner-container container" style="justify-content: flex-end;padding-bottom: 30px;">
+    <div class="banner-container container">
       <p class="subtext">Digital transformation
 
       </p>
